# braille-display

./: .gitignore
brlController/: CMakeLists.txt  brlController.ino  device.cpp  device.h  main.cpp  main.h  servoHub.h  stepper.h
brlController/brailleDisplay/: brailleDisplay.cpp  brailleDisplay.h
brlController/debug/: main.cpp
brlController/sensors/: button.cpp  button.h  controlHub.cpp  controlHub.h  joystick.h
brlController/serial/: brlSerial.cpp  brlSerial.h
brlController/speaker/: pitches.h  speaker.h
brlDisplayDemo/: brlDisplayDemo.ino  servo.h
doc/presentations/msk2019/: speech.tex  thesisis.tex
ml/: readme.md
ml/data/: convert_example.m  data.mat  data_split.mat  divide_data.m  make_data.m
ml/data/raw/: readme.md
ml/logistic_regression/: lr_cost.m  main.m
ml/nnet/: main.m  nnCostFunction.m
test_hardware/arduino/button/: button.ino
test_hardware/arduino/servo_pwm/: servo_pwm.ino
test_hardware/arduino/stepper_calibrate/: stepper_calibrate.h  stepper_calibrate.ino
test_hardware/arduino/stepper_nema17/: stepper_nema17.ino
